name:                dds-examples
version:             0.1.0.0
synopsis:            a few examples for the dds package
-- description:
homepage:            https://github.com/githubuser/dds-examples#readme
license:             Apache
license-file:        LICENSE
author:              Erik Boasson
maintainer:          eb@ilities.com
copyright:           (c) 2017 PrismTech
category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >= 1.24

custom-setup
  setup-depends:
    base >= 4.5,
    Cabal >= 1.24,
    process >= 1.4.3

executable genread
  hs-source-dirs:      genread
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, aeson, mtl, utf8-string, dds
  default-language:    Haskell2010

executable pong
  hs-source-dirs:      pong
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, aeson, dds
  default-language:    Haskell2010

executable sub
  hs-source-dirs:      sub
  main-is:             Main.hs
  other-modules:       KeyedSeq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, utf8-string, time, vector, dds
  default-language:    Haskell2010

executable cohtest
  hs-source-dirs:      cohtest
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, utf8-string, time, vector, dds
  default-language:    Haskell2010
