name:                dds
version:             0.1.0.0
synopsis:            A Haskell binding for OpenSplice DDS
--description:         
license:             Apache
license-file:        LICENSE
author:              Erik Boasson
maintainer:          eb@ilities.com
copyright:           (c) 2017 PrismTech
stability:           alpha
homepage:            https://github.com/prismtech/haskell-dds
-- category:            
build-type:          Custom
cabal-version:       >= 1.24
extra-source-files:  README.md

custom-setup
  setup-depends:
    base >= 4.5 && < 4.11,
    Cabal >= 1.24,
    process >= 1.4.3

library
  exposed-modules:     DDS, DDS.Core, DDS.Entity, DDS.Qos, DDS.Type, DDS.Generic, DDS.Raw, DDS.TH, DDS.IDL, DDS.TopicMDOverrides, DDS.TopicXML, Data.Conduit.DDS
  other-extensions:    ForeignFunctionInterface 
  build-depends:       base >=4.8, split, hxt, aeson, text, scientific, vector, unordered-containers, megaparsec, template-haskell, ghc-prim, monad-loops, utf8-string, conduit, resourcet
  hs-source-dirs:      src
  ghc-options:         -dynamic -fPIC -O2
  build-tools:         c2hs
  default-language:    Haskell2010
